Return placeholder routing session in NoOpInfoMediaManager
To maintain the behaviour of InfoMediaManager and avoid crashes,
NoOpInfoMediaManager should return a "no-op routing session" as its
active routing session. This replaces the null checks in ag/26288615.

This CL is a fix-forward for the crash in b/328037045.

Test: Presubmit + atest com.android.settingslib.media
Bug: 328037045
Bug: 291277292
Flag: N/A
Change-Id: Ic5a802130748304b7091cd09a50290145f488fd0